compiler/lume_parse/src/snapshots/lume_parse__tests__struct_snapshots@ext_method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"\n        impl Foo {\n            fn external bar() -> Int32\n        }\")"
---
SOURCE_FILE@0..68
  WHITESPACE@0..9 "\n        "
  IMPL@9..68
    IMPL_KW@9..13 "impl"
    WHITESPACE@13..14 " "
    NAMED_TYPE@14..18
      PATH@14..18
        PATH_SEGMENT@14..18
          PATH_TYPE@14..18
            IDENT@14..17 "Foo"
            WHITESPACE@17..18 " "
    LEFT_BRACE@18..19 "{"
    WHITESPACE@19..32 "\n            "
    METHOD@32..67
      SIG@32..67
        FN_KW@32..34 "fn"
        WHITESPACE@34..35 " "
        EXTERN_KW@35..43 "external"
        WHITESPACE@43..44 " "
        NAME@44..47
          IDENT@44..47 "bar"
        PARAM_LIST@47..49
          LEFT_PAREN@47..48 "("
          RIGHT_PAREN@48..49 ")"
        WHITESPACE@49..50 " "
        RETURN_TYPE@50..67
          ARROW@50..52 "->"
          WHITESPACE@52..53 " "
          NAMED_TYPE@53..67
            PATH@53..67
              PATH_SEGMENT@53..67
                PATH_TYPE@53..67
                  IDENT@53..58 "Int32"
                  WHITESPACE@58..67 "\n        "
    RIGHT_BRACE@67..68 "}"
