compiler/lume_parse/src/snapshots/lume_parse__tests__struct_snapshots@invalid_impl_name.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl 1A {}\")"
---
SOURCE_FILE@0..7
  IMPL@0..4
    IMPL_KW@0..4 "impl"
  IDENT@4..5 "A"
  LEFT_BRACE@5..6 "{"
  RIGHT_BRACE@6..7 "}"

expected type@5..6
expected kind LEFT_BRACE@6..7
invalid top-level item@6..7
